# LinearAlgebra

./: CLAUDE.md  CMakeLists.txt  README.md
.claude/skills/add-toolbox-function/: SKILL.md
.claude/skills/build-troubleshooting/: SKILL.md
.claude/skills/cmake-module/: SKILL.md
.claude/skills/design-patterns/: SKILL.md
.claude/skills/documentation/: SKILL.md
.claude/skills/implementation/: SKILL.md
.claude/skills/refactoring-plan/: SKILL.md
.claude/skills/test-executor/: SKILL.md
.github/: settings.json  tasks.md
.github/skills/add-toolbox-function/: SKILL.md
.github/skills/code-review/: SKILL.md
.github/skills/coding-guidelines/: SKILL.md
.github/skills/git-workflow/: SKILL.md
.github/skills/implementation/: SKILL.md
.github/skills/template-instantiation/: SKILL.md
.github/skills/test-executor/: SKILL.md
.github/skills/test-writer/: SKILL.md
LinearAlgebra/: CMakeLists.txt
LinearAlgebra/include/: Matrix.hpp  MatrixExplicitTemplateInstantiations.hpp  MatrixHelpers.hpp  MatrixHelpersExplicitTemplateInstantiations.hpp  MatrixToolbox.hpp  Vector.hpp  VectorExplicitTemplateInstantiations.hpp
LinearAlgebra/src/: Matrix.cpp  MatrixHelpers.cpp  MatrixInternalHelpers.cpp  MatrixToolbox.cpp  Vector.cpp
LinearAlgebraTests/: CMakeLists.txt
LinearAlgebraTests/src/: MatrixArithmeticOperators.cpp  MatrixArithmeticOperatorsComplex.cpp  MatrixCholesky.cpp  MatrixHelpersTests.cpp  MatrixInverseTests.cpp  MatrixInverseTests_HilbertMatrices.cpp  MatrixLUFactorization.cpp  MatrixLUFactorization_HilbertMatrices.cpp  MatrixLUFactorization_RowSwap.cpp  MatrixLUFactorization_Strang.cpp  MatrixLU_Echelon.cpp  MatrixMultiplication.cpp  MatrixMultiplicationComplex.cpp  MatrixPivotsAndRank.cpp  MatrixReducedRowEchelonForm.cpp  MatrixScalarBroadcasters.cpp  MatrixTests.cpp  MatrixVectorMultiplication.cpp  MatrixVectorMultiplication_Complex.cpp  Matrix_QR_Factorization.cpp  Matrix_RightLeftInverseTests.cpp  Matrix_SolveLLSQ.cpp  Matrix_SolveLinearEquations.cpp  Matrix_SolveLinearEquations_HilbertMatrices.cpp  Matrix_SolveLowerTriangularSystems.cpp  Matrix_SolveRankEqualCols.cpp  Matrix_SolveRankEqualRows.cpp  Matrix_SolveRankSmallerThanRowsAndCols.cpp  Matrix_SolveUpperTriangularSystems.cpp  VectorArithmeticOperators.cpp  VectorComplex.cpp  VectorComplexScalarBroadcasters.cpp  VectorScalarBroadcasters.cpp  VectorTests.cpp  main.cpp
